[gd_scene load_steps=4 format=2]

[ext_resource path="res://socket.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="socket" type="TextureButton" groups=["sockets"]]
action_mode = 0
texture_normal = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 32, 32 )
shape = SubResource( 1 )

[node name="center" type="Position2D" parent="."]
position = Vector2( 32, 31 )

[connection signal="button_down" from="." to="." method="_on_Sprite_button_down"]
[connection signal="button_up" from="." to="." method="_on_Sprite_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_socket_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_socket_mouse_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
